# near-facsimile

./: .gitignore  Cargo.toml  Containerfile  README.md  build.rs  near-facsimile.spec  snapcraft.yaml
.rpm/: near-facsimile.spec  similar-adoc-modules.spec
src/: cli.rs  comparison.rs  lib.rs  load_files.rs  logging.rs  main.rs  percentage.rs  serialize.rs
