[package]
name = "near-facsimile"
version = "1.0.5"
edition = "2021"
rust-version = "1.62"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
license = "Apache-2.0"
description = "Find similar or identical text files in a directory"
repository = "https://github.com/msuchane/near-facsimile/"
readme = "README.md"
keywords = ["duplicate", "similarity", "similar", "compare"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
strsim = "0.10"
rayon = "1.6"
log = "0.4"
simplelog = "0.12"
owo-colors = { version = "3.5", features = ["supports-colors"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "=4.0", features = ["derive", "cargo"] }
permutator = "0.4"
trigram = "0.4"
regex = "1.7"
indicatif = { version = "0.17", features = ["rayon"] }
# Temporary to keep MSRV at 1.62
time = "=0.3.19"
ignore = "=0.4.18"
clap_lex = "=0.3.0"

[build-dependencies]
# Temporary to keep MSRV at 1.60
clap = { version = "=4.0", features = ["derive", "cargo"] }
clap_mangen = "=0.2.6"
regex = "1.7"
